...
                  ),
                ],
              ),
            ),
            ElevatedButton(
                onPressed: signOut,
                child: const Text('Sign Out')
            )
          ],
        ),
      ),
    );
  }
...
