...
            TextField(
              controller: uscIdController,
              decoration: const InputDecoration(labelText: 'USC ID'),
            ),
            const SizedBox(height: 20),
            ElevatedButton(
              key: const Key('submitSignupButton'),
              onPressed: signup,
              child: const Text('Signup'),
            ),
          ],
        ),
      ),
...
